Feat: created a fuction that check if mvn projects compiles, fix #6
Created a function that checks if mvn projects compiles. And added 2 test mvn projects that will be tested.